clusters/infrastructure/prod/media/bookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookshelf
  namespace: media
spec:
  selector:
    app: bookshelf
  ports:
    - name: http
      port: 80
      targetPort: 8787
